# ccval

./: CLAUDE.md  README.md  pyproject.toml
scripts/: ccval_preprocess.sh
src/ccval/: __init__.py
src/ccval.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ccval/cli/: __init__.py  main.py
src/ccval/config/: __init__.py  schema.py
src/ccval/io/: __init__.py  iris_loaders.py
src/ccval/preprocess/: __init__.py  annual_means.py  extract.py  soil_params.py  to_xarray.py
src/ccval/viz/: __init__.py  maps.py  timeseries.py
tests/: test_smoke_import.py
workflows/recipes/: ingest.yml  preprocess_land.yml  validate_land_vs_cmip6.yml
workflows/slurm/: preprocess.sbatch
